--- a/style.css
+++ b/style.css
@@ -307,6 +307,18 @@ body {
   right: auto;
 }
 
+h3 {
+  font-family: "Zeyada", cursive;
+  color: var(--blue);
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+.timeline-heading span {
+  color: black;
+  font-weight: bold;
+}
+
 /* Responsive */
 /* Extra Large */
 @media (max-width: 1200px) {
@@ -402,8 +414,13 @@ body {
     margin: 3px;
   }
 
+  .timeline li .timeline-panel {
+    width: 50%;
+    transform: translateX(-5px);
+  }
+
   .timeline li .timeline-image {
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
   }
 }
