--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ body {
 
 .home h2,
 .info h2,
-.story h2 {
+.story h2,
+.gallery h2 {
   color: var(--blue);
   font-family: "Zeyada", cursive;
   font-size: 3rem;
@@ -191,12 +192,14 @@ body {
   font-weight: 200;
 }
 
-.story {
+.story,
+.gallery {
   padding-top: 8rem;
   padding-bottom: 8rem;
 }
 
-.story span {
+.story span,
+.gallery span {
   display: block;
   text-transform: uppercase;
   color: #666;
@@ -205,7 +208,8 @@ body {
   margin-bottom: 1rem;
 }
 
-.story p {
+.story p,
+.gallery p {
   font-size: 1rem;
   font-weight: 400;
 }
@@ -319,6 +323,10 @@ h3 {
   font-weight: bold;
 }
 
+.gallery {
+  background-color: rgb(189, 180, 235);
+}
+
 /* Responsive */
 /* Extra Large */
 @media (max-width: 1200px) {
@@ -404,7 +412,7 @@ h3 {
 }
 
 /* Mobile Phone */
-@media (max-width: 576px) {
+@media (max-width: 475px) {
   html {
     font-size: 60%;
   }
@@ -415,12 +423,12 @@ h3 {
   }
 
   .timeline li .timeline-panel {
-    width: 50%;
+    width: 45%;
     transform: translateX(-5px);
   }
 
   .timeline li .timeline-image {
-    width: 80px;
-    height: 80px;
+    width: 90px;
+    height: 90px;
   }
 }
